--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <p id="resultado"></p>
 
   <script>
-    const BACKEND_URL = 'https://TU_BACKEND.repl.co'; // Reemplaza con la URL de tu backend en Replit
+    const BACKEND_URL = 'https://85259d9b-8732-4430-b7f1-e62a151058b0-00-n2nw2gmn48l5.picard.replit.dev/'; // Reemplaza con la URL de tu backend en Replit
 
     function cargarServicios() {
       fetch(`${BACKEND_URL}/servicios`)
